# systemix

./: .gitignore
McpHost/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  config.example.json  pyproject.toml  requirements.txt
McpHost/src/mcp_host/: __init__.py  app.py  config.py  logging_config.py  main.py
McpHost/src/mcp_host/api/: routes.py
McpHost/src/mcp_host/middleware/: request_context.py
McpHost/src/mcp_host/models/: __init__.py  api.py  tooling.py
McpHost/src/mcp_host/services/: ask_service.py  llm_service.py  remote_mcp_service.py  tool_conversion.py
McpHost/tests/: test_api.py  test_config.py  test_services.py  test_tool_conversion.py
McpServer/: .dockerignore  Dockerfile  README.md  compose.yml  config.example.json  pyproject.toml  requirements.txt
McpServer/kb/: account_and_login.txt  bad_docs.txt  payments.txt  product_usage.txt  returns_and_refunds.txt  shipping_and_orders.txt
McpServer/scripts/: generate_kb_demo_data.py
McpServer/src/systemix_mcp_server/: __init__.py  app.py  config.py  database.py  kb_loader.py  logging_config.py  main.py  mcp_server.py  middleware.py  models.py  services.py
McpServer/src/systemix_mcp_server/browser/: index.html
McpServer/tests/: test_app.py  test_config.py  test_database.py  test_kb_loader.py  test_services.py
WebSite/: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  instructions.md  requirements.txt
WebSite/app/: __init__.py  config.py  content.py  main.py
WebSite/app/routes/: contact.py  pages.py
WebSite/app/schemas/: contact.py
WebSite/app/services/: __init__.py  contact.py  geolocation.py  rate_limit.py  sanitization.py
WebSite/app/templates/: base.html  contact.html  faq.html  home.html  use_cases.html
(+3 files in other folders)
